--- a/index.html
+++ b/index.html
@@ -7,37 +7,156 @@
     <title>PHP Dairy</title>
 </head>
 <body>
+
 <nav class="nav">
-    <a href="index.html" class="nav-brand">
+    <div class="container">
+        <div class="nav__layout">
+            <a href="index.html" class="nav-brand">
 
-        <svg class="nav-brand-image" viewBox="0 0 60.7863869853 60.7863869853">
-            <path style="fill: currentColor"
-                  d="m45.589790239,30.3931934927c8.3928407749,0,15.1965967463-6.8037559715,15.1965967463-15.1965967463S53.9826310139,0,45.589790239,0H15.196554313C6.8037135382,0,0,6.8037559715,0,15.1965967463v30.3931934927c0,8.3928407749,6.8037135382,15.1965967463,15.196554313,15.1965967463h30.393235926c8.3928407749,0,15.1965967463-6.8037559715,15.1965967463-15.1965967463s-6.8037559715-15.1965967463-15.1965967463-15.1965967463Z"/>
+                <svg class="nav-brand-image" viewBox="0 0 60.7863869853 60.7863869853">
+                    <path style="fill: currentColor"
+                          d="m45.589790239,30.3931934927c8.3928407749,0,15.1965967463-6.8037559715,15.1965967463-15.1965967463S53.9826310139,0,45.589790239,0H15.196554313C6.8037135382,0,0,6.8037559715,0,15.1965967463v30.3931934927c0,8.3928407749,6.8037135382,15.1965967463,15.196554313,15.1965967463h30.393235926c8.3928407749,0,15.1965967463-6.8037559715,15.1965967463-15.1965967463s-6.8037559715-15.1965967463-15.1965967463-15.1965967463Z"/>
 
-        </svg>
-        PHP Diary
-    </a>
+                </svg>
+                PHP Diary
+            </a>
 
-    <a href="form.html" class="button">
-        <svg
-                class="button__icon"
-                viewBox="0 0 44.4901230052 44.4901230053">
-            <g style="fill: none ;stroke: currentColor; stroke-linecap: round; stroke-linejoin: round;stroke-width: 2px;">
-                <circle class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" cx="22.2450615026" cy="22.2450615026"
-                        r="21.2450615026"/>
-                <line class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" x1="22.2450615026" y1="13.4699274037"
-                      x2="22.2450615026" y2="31.0201956015"/>
-                <line class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" x1="31.0201956015" y1="22.2450658041"
-                      x2="13.4699274037" y2="22.2450572011"/>
-            </g>
-        </svg>
-        New entry
-    </a>
+            <a href="form.html" class="button">
+                <svg
+                        class="button__icon"
+                        viewBox="0 0 44.4901230052 44.4901230053">
+                    <g style="fill: none ;stroke: currentColor; stroke-linecap: round; stroke-linejoin: round;stroke-width: 2px;">
+                        <circle class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" cx="22.2450615026" cy="22.2450615026"
+                                r="21.2450615026"/>
+                        <line class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" x1="22.2450615026" y1="13.4699274037"
+                              x2="22.2450615026" y2="31.0201956015"/>
+                        <line class="uuid-a2b16520-dd4e-42aa-861e-048bcb73792f" x1="31.0201956015" y1="22.2450658041"
+                              x2="13.4699274037" y2="22.2450572011"/>
+                    </g>
+                </svg>
+                New entry
+            </a>
+        </div>
+    </div>
 </nav>
-<main>
+
+<main class="main">
+    <div class="container">
+        <h1 class="main-heading">Entries</h1>
+        <div class="card">
+            <div class="card__image-container">
+                <img class="card__image" src="./images/pexels-canva-studio-3153199.jpg" alt="">
+            </div>
+            <div class="card__desc-container">
+                <div class="card__desc-time">
+                    Time
+                </div>
+                <h2 class="card__heading">Php is amazing</h2>
+                <div class="card__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+                    ratione rem repellat, suscipit veniam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto aut beatae
+                    consequuntur cupiditate dolor doloremque doloribus eaque enim eos et id ipsa molestiae, natus omnis
+                    quae quod recusandae reiciendis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci
+                    amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__image-container">
+                <img class="card__image" src="./images/pexels-kaushal-moradiya-2781195.jpg" alt="">
+            </div>
+            <div class="card__desc-container">
+                <div class="card__desc-time">
+                    Time
+                </div>
+                <h2 class="card__heading">Php is amazing</h2>
+                <div class="card__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+                    ratione rem repellat, suscipit veniam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto aut beatae
+                    consequuntur cupiditate dolor doloremque doloribus eaque enim eos et id ipsa molestiae, natus omnis
+                    quae quod recusandae reiciendis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci
+                    amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__image-container">
+                <img class="card__image" src="./images/pexels-lumn-167682.jpg" alt="">
+            </div>
+            <div class="card__desc-container">
+                <div class="card__desc-time">
+                    Time
+                </div>
+                <h2 class="card__heading">Php is amazing</h2>
+                <div class="card__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+                    ratione rem repellat, suscipit veniam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto aut beatae
+                    consequuntur cupiditate dolor doloremque doloribus eaque enim eos et id ipsa molestiae, natus omnis
+                    quae quod recusandae reiciendis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci
+                    amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__image-container">
+                <img class="card__image" src="./images/pexels-tranmautritam-68761.jpg" alt="">
+            </div>
+            <div class="card__desc-container">
+                <div class="card__desc-time">
+                    Time
+                </div>
+                <h2 class="card__heading">Php is amazing</h2>
+                <div class="card__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+                    ratione rem repellat, suscipit veniam?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto aut beatae
+                    consequuntur cupiditate dolor doloremque doloribus eaque enim eos et id ipsa molestiae, natus omnis
+                    quae quod recusandae reiciendis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci
+                    amet asperiores consequatur
+                    cumque debitis distinctio dolor dolore expedita fugit molestias necessitatibus neque officiis omnis
+
+                </div>
+            </div>
+        </div>
+
+        <ul class="pagination">
+            <li class="pagination__li"><a class="pagination__link" href="">⏴</a></li>
+            <li class="pagination__li"><a class="pagination__link pagination__li--active" href="">1</a></li>
+            <li class="pagination__li"><a class="pagination__link" href="">2</a></li>
+            <li class="pagination__li"><a class="pagination__link" href="">3</a></li>
+            <li class="pagination__li"><a class="pagination__link" href="">4</a></li>
+            <li class="pagination__li"><a class="pagination__link" href="">⏵</a></li>
+        </ul>
+    </div>
 
 
 </main>
+
+
+<footer class="footer">
+    <div class="container">
+        <h3 class="footer__heading">PHP diary project</h3>
+        <p class="footer__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolore dolores nemo nihil
+            quibusdam quo
+            repudiandae tempora totam? Assumenda doloremque excepturi totam! Alias amet debitis doloremque incidunt
+            laborum
+            reiciendis repellendus.
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
